syntax = "proto3";

service AsylumService {
    rpc AsylumPing (AsylumPingReq) returns (AsylumPingRsp) {
    }
    rpc StartStory (StartStoryReq) returns (StartStoryRsp) {
    };
    rpc RunStory (RunStoryReq) returns (RunStoryRsp) {
    };
}

message AsylumPingReq {
}

message AsylumPingRsp {
}

message StartStoryReq {
    string token = 1;
}

message StartStoryRsp {
}

message RunStoryReq {
    string token = 1;
}

message RunStoryRsp {
}
